# starknet-balance-query

./: .gitignore  .tool-versions  README.md  Scarb.toml  address_list.md  snfoundry.toml
.github/workflows/: scarb.yml
balance_query_scripts/: .env.example  .gitignore  Cargo.toml  addresses.example.json
balance_query_scripts/src/: main.rs
src/: balance_query.cairo  lib.cairo
src/erc20/: mock_erc20.cairo
tests/: test_balance_query.cairo
