[package]
name = "balance_query_scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs"}
